# simon-compiler

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: cmake-multi-platform.yml  create-release.yml
compiler/: compiler.c  helpers.c  helpers.h  interpreter.c  interpreter.h  library_manager.c  library_manager.h  main.c  writer.c  writer.h
docs/: interpreter.md  introduction.md  libraries.md
libraries/simon/: README.md  simon.c
test/: test-out-binary.s  test.simon
